k8s/products-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-api-deployment
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products-api
  template:
    metadata:
     labels:
       app: products-api
    spec:
      containers:
        - name: products-api
          image: straxseller/products-api:v0.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
