k8s/products-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: products-api-service
  namespace: app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: products-api
